cmake_minimum_required(VERSION 3.23)
project(nankai_algorithm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(nankai_algorithm week_1.cpp)
#add_executable(nankai_algorithm week_2.cpp)
#add_executable(nankai_algorithm week_3.cpp)
#add_executable(nankai_algorithm week_4.cpp)
#add_executable(nankai_algorithm week_5.cpp)
add_executable(nankai_algorithm week_6.cpp)
#add_executable(nankai_algorithm week_7.cpp)
#add_executable(nankai_algorithm week_8.cpp)
#add_executable(nankai_algorithm week_9.cpp)
#add_executable(nankai_algorithm week_10.cpp)
#add_executable(nankai_algorithm week_11.cpp)

#add_executable(nankai_algorithm project/super_egg_drop.cpp)